--- a/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/dummy_action_cluster.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/dummy_action_cluster.yaml
@@ -14,8 +14,16 @@
   hosts: all
   connection: local
   gather_facts: no
-
   tasks:
-    - name: Dummy?
-      debug:
-        msg: "{{cluster.config.float}};{{cluster.config.boolean}};{{cluster.config.integer}};{{cluster.config.string}};{{cluster.config.list}};{{cluster.config.option}};{{cluster.config.text}};{{cluster.config.group}};{{cluster.config.structure}};{{cluster.config.map}}"
+    - name: Assert config
+      assert:
+        that:
+          - job.config.map[inventory_hostname].float == cluster.config.float
+          - job.config.map[inventory_hostname].boolean == cluster.config.boolean
+          - job.config.map[inventory_hostname].integer == cluster.config.integer
+          - job.config.map[inventory_hostname].string == cluster.config.string
+          - job.config.map[inventory_hostname].list == cluster.config.list
+          - job.config.map[inventory_hostname].text == cluster.config.text
+          - job.config.map[inventory_hostname].group == cluster.config.group
+          - job.config.map[inventory_hostname].structure == cluster.config.structure
+          - job.config.map[inventory_hostname].map == cluster.config.map
