--- a/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
@@ -14,7 +14,6 @@
   name: test_cluster
   version: 1.5
   edition: community
-  config_group_customization: true
   actions:
     test_action:
       type: job
@@ -83,18 +82,25 @@
       active: True
       group_customization: true
       subs:
-        - name: readonly-key
-          type: string
-          default: value
-          read_only: any
-        - name: writable-key
-          type: string
-          default: value
-          writable: any
-        - name: required
+        - name: port
+          display_name: HTTP port
+          description: Exposes the JSON-over-HTTP interface used by all clients.
           type: integer
-          required: true
-          default: 15
+          min: 1024
+          max: 65536
+          default: 9200
+          required: yes
+          group_customization: false
+        - name: transport_port
+          display_name: Transport port
+          description: Used for communication between nodes in the cluster, by the
+            Java Transport client.
+          type: integer
+          min: 1024
+          max: 65536
+          default: 9300
+          required: yes
+          group_customization: true
     - name: structure
       type: structure
       required: false
@@ -185,18 +191,24 @@
       active: True
       group_customization: true
       subs:
-        - name: readonly-key
-          type: string
-          default: value
-          read_only: any
-        - name: writable-key
-          type: string
-          default: value
-          writable: any
-        - name: required
-          type: integer
-          required: true
-          default: 15
+       - name: port
+         display_name: HTTP port
+         description: Exposes the JSON-over-HTTP interface used by all clients.
+         type: integer
+         min: 1024
+         max: 65536
+         default: 9200
+         required: yes
+         group_customization: false
+       - name: transport_port
+         display_name: Transport port
+         description: Used for communication between nodes in the cluster, by the Java Transport client.
+         type: integer
+         min: 1024
+         max: 65536
+         default: 9300
+         required: yes
+         group_customization: true
     - name: structure
       type: structure
       required: false
@@ -249,7 +261,7 @@
           type: password
           required: false
           default: password
-          group_customization: true
+          group_customization: true: group
         - name: string
           type: string
           required: true
@@ -287,18 +299,24 @@
           active: True
           group_customization: true
           subs:
-            - name: readonly-key
-              type: string
-              default: value
-              read_only: any
-            - name: writable-key
-              type: string
-              default: value
-              writable: any
-            - name: required
-              type: integer
-              required: true
-              default: 15
+           - name: port
+             display_name: HTTP port
+             description: Exposes the JSON-over-HTTP interface used by all clients.
+             type: integer
+             min: 1024
+             max: 65536
+             default: 9200
+             required: yes
+             group_customization: false
+           - name: transport_port
+             display_name: Transport port
+             description: Used for communication between nodes in the cluster, by the Java Transport client.
+             type: integer
+             min: 1024
+             max: 65536
+             default: 9300
+             required: yes
+             group_customization: true
         - name: structure
           type: structure
           required: false
