ADCM-2087_ fix remarks

--- a/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
@@ -261,7 +261,7 @@
           type: password
           required: false
           default: password
-          group_customization: true: group
+          group_customization: true
         - name: string
           type: string
           required: true
