Add multi_states set to inventory test + fix linter

--- a/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
+++ b/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
@@ -180,6 +180,13 @@
                 on_fail: created
             params:
                 qwe: 42
+        set_multi_states:
+          type: job
+          script: ansible/set_multi.yaml
+          script_type: ansible
+          states:
+            available:
+              - created
         run:
             type: job
             script: ansible/run.yaml
