--- a/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/dummy_action_provider.yaml
+++ b/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/dummy_action_provider.yaml
@@ -22,9 +22,11 @@
           - job.config.map[inventory_hostname].float == provider.config.float
           - job.config.map[inventory_hostname].boolean == provider.config.boolean
           - job.config.map[inventory_hostname].integer == provider.config.integer
+          - job.config.map[inventory_hostname].password == provider.config.password
           - job.config.map[inventory_hostname].string == provider.config.string
           - job.config.map[inventory_hostname].list == provider.config.list
           - job.config.map[inventory_hostname].text == provider.config.text
           - job.config.map[inventory_hostname].group == provider.config.group
           - job.config.map[inventory_hostname].structure == provider.config.structure
           - job.config.map[inventory_hostname].map == provider.config.map
+          - job.config.map[inventory_hostname].file == lookup('file', provider.config.file)
