--- a/tests/ui_tests/test_provider_page_data/provider/dummy_action.yaml
+++ b/tests/ui_tests/test_provider_page_data/provider/dummy_action.yaml
@@ -11,11 +11,13 @@
 # limitations under the License.
 ---
 - name: Dummy action
-  hosts: all
+  hosts: localhost
   connection: local
   gather_facts: no
 
   tasks:
     - name: Dummy?
-      debug:
-        msg: "Some message"
+      pause:
+        minutes: 1
+      tags:
+        - pause
