Tests on issues converted to tests on concerns

--- a/tests/ui_tests/test_cluster_list_page_data/cluster_community/config.yaml
+++ b/tests/ui_tests/test_cluster_list_page_data/cluster_community/config.yaml
@@ -15,6 +15,14 @@
   version: 1.5
   edition: community
   actions:
+    long_action:
+      type: job
+      script: dummy_action.yaml
+      script_type: ansible
+      states:
+        available: any
+      params:
+        ansible_tags: pause
     test_action:
       type: job
       script: dummy_action.yaml
@@ -23,6 +31,8 @@
         available:
           - created
         on_success: installed
+      params:
+        ansible_tags: dummy
   import:
      Pre-uploaded Dummy cluster to import:
           versions:
@@ -60,6 +70,8 @@
         available:
           - created
         on_success: installed
+      params:
+        ansible_tags: dummy
   config:
      core-site:
         param1:
@@ -84,3 +96,5 @@
               available:
                 - created
               on_success: installed
+          params:
+            ansible_tags: dummy
