--- a/tests/ui_tests/test_cluster_list_page_data/cluster_community/dummy_action.yaml
+++ b/tests/ui_tests/test_cluster_list_page_data/cluster_community/dummy_action.yaml
@@ -21,3 +21,8 @@
         minutes: 1
       tags:
         - pause
+    - name: Dummy?
+      debug:
+        msg: "Some message"
+      tags:
+        - dummy
