Short dummy action for test_provider_page bundle

--- a/tests/ui_tests/test_provider_page_data/provider/dummy_action.yaml
+++ b/tests/ui_tests/test_provider_page_data/provider/dummy_action.yaml
@@ -17,7 +17,7 @@
 
   tasks:
     - name: Dummy?
-      pause:
-        minutes: 1
+      debug:
+        msg: "Some message"
       tags:
         - pause
