ADCM-2088 Fixed test errors

--- a/tests/functional/test_states_data/provider_and_host_multistate/job_new_dsl_success/config.yaml
+++ b/tests/functional/test_states_data/provider_and_host_multistate/job_new_dsl_success/config.yaml
@@ -15,7 +15,7 @@
     state_changing_action:
       type: job
       script_type: ansible
-      script: fail.yaml
+      script: ok.yaml
       masking:
       on_fail:
         multi_state:
@@ -46,7 +46,7 @@
     state_changing_action:
       type: job
       script_type: ansible
-      script: fail.yaml
+      script: ok.yaml
       masking:
       on_fail:
         multi_state:
