--- a/tests/functional/test_states_data/cluster_and_service_multistate/job_new_dsl_success/config.yaml
+++ b/tests/functional/test_states_data/cluster_and_service_multistate/job_new_dsl_success/config.yaml
@@ -9,11 +9,13 @@
       type: job
       script_type: ansible
       script: set_multistate.yaml
+      params:
+        ansible_tags: cluster
       masking:
     state_changing_action:
       type: job
       script_type: ansible
-      script: fail.yaml
+      script: ok.yaml
       masking:
       on_fail:
         multi_state:
@@ -38,11 +40,13 @@
       type: job
       script_type: ansible
       script: set_multistate.yaml
+      params:
+        ansible_tags: service
       masking:
     state_changing_action:
       type: job
       script_type: ansible
-      script: fail.yaml
+      script: ok.yaml
       masking:
       on_fail:
         multi_state:
@@ -64,11 +68,13 @@
           type: job
           script_type: ansible
           script: set_multistate.yaml
+          params:
+            ansible_tags: component
           masking:
         state_changing_action:
           type: job
           script_type: ansible
-          script: fail.yaml
+          script: ok.yaml
           masking:
           on_fail:
             multi_state:
