Fix develop tests (#1136)
* ActionPage tests removed, "in progress" actions made longer, action in table row locator fixed

* Tests on issues converted to tests on concerns

* Short dummy action for test_provider_page bundle

* Another action menu test removed and timeout increased for "bell" color check

--- a/tests/ui_tests/test_provider_page_data/provider/dummy_action.yaml
+++ b/tests/ui_tests/test_provider_page_data/provider/dummy_action.yaml
@@ -11,7 +11,7 @@
 # limitations under the License.
 ---
 - name: Dummy action
-  hosts: all
+  hosts: localhost
   connection: local
   gather_facts: no
 
@@ -19,3 +19,5 @@
     - name: Dummy?
       debug:
         msg: "Some message"
+      tags:
+        - pause
