--- a/tests/ui_tests/test_cluster_list_page_data/cluster_community/dummy_action.yaml
+++ b/tests/ui_tests/test_cluster_list_page_data/cluster_community/dummy_action.yaml
@@ -11,11 +11,18 @@
 # limitations under the License.
 ---
 - name: Dummy action
-  hosts: all
+  hosts: localhost
   connection: local
   gather_facts: no
 
   tasks:
     - name: Dummy?
+      pause:
+        minutes: 1
+      tags:
+        - pause
+    - name: Dummy?
       debug:
         msg: "Some message"
+      tags:
+        - dummy
