ADCM-1987 add base permissions viewsets

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -1,8 +1,16 @@
 ---
 
-version: 1
+version: 3
 
 roles:
+    - name: base
+      apps:
+        - label: auth
+          models:
+            - name: user
+              codenames:
+                - view
+                - change
     - name: admin
       apps:
         - label: cm
