ADCM-2145 add hosts variants for config groups tests

--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
@@ -25,6 +25,8 @@
       config:
         - name: map
           type: json
+        - name: hosts
+          type: string
   config:
     - name: float
       type: float
@@ -121,6 +123,8 @@
       config:
         - name: map
           type: json
+        - name: hosts
+          type: string
   config:
     - name: float
       type: float
@@ -215,6 +219,8 @@
           config:
             - name: map
               type: json
+            - name: hosts
+              type: string
 
       config:
         - name: float
