--- a/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/dummy_action_cluster.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/dummy_action_cluster.yaml
@@ -11,7 +11,7 @@
 # limitations under the License.
 ---
 - name: Dummy action
-  hosts: all
+  hosts: "{{ job.config.hosts }}"
   connection: local
   gather_facts: no
   tasks:
