--- a/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/config.yaml
+++ b/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/config.yaml
@@ -24,6 +24,8 @@
       config:
         - name: map
           type: json
+        - name: hosts
+          type: string
   config:
     - name: float
       type: float
