--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_cluster.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_cluster.yaml
@@ -11,9 +11,10 @@
 # limitations under the License.
 ---
 - name: Dummy action
-  hosts: all
+  hosts: "{{ job.config.hosts }}"
   connection: local
   gather_facts: no
+
   tasks:
     - name: Assert config
       assert:
