Expected invoker link changed due to ADCM-2159

--- a/tests/ui_tests/test_jobs_page_data/cluster/config.yaml
+++ b/tests/ui_tests/test_jobs_page_data/cluster/config.yaml
@@ -75,5 +75,10 @@
           display_name: "Component host action"
           params:
             ansible_tags: success
+        long_action:
+          <<: *job
+          display_name: "Long action"
+          params:
+            ansible_tags: pause
 
   actions: *actions
