ADCM-2086 fix remarks

--- a/tests/functional/test_config_groups_data/cluster_with_all_group_keys_false/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_all_group_keys_false/cluster/config.yaml
@@ -101,7 +101,7 @@
           max: 65536
           default: 9300
           required: yes
-          group_customization: true
+          group_customization: false
     - name: structure
       type: structure
       required: false
@@ -210,7 +210,7 @@
          max: 65536
          default: 9300
          required: yes
-         group_customization: true
+         group_customization: false
     - name: structure
       type: structure
       required: false
@@ -319,7 +319,7 @@
              max: 65536
              default: 9300
              required: yes
-             group_customization: true
+             group_customization: false
         - name: structure
           type: structure
           required: false
