Add xfail on test_upgrade_provider/cluster_with_group_configs
Update tests for new fields in config

--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_fields/config.yaml
@@ -112,12 +112,10 @@
           max: 65536
           default: 9200
           required: true
-        - name: transport_port
-          type: integer
-          min: 1024
-          max: 65536
-          default: 9300
-          required: true
+        - name: new_text
+          type: text
+          required: false
+          default: text_new
     - name: new_group
       type: group
       activatable: true
@@ -255,12 +253,10 @@
           max: 65536
           default: 9200
           required: true
-        - name: transport_port
-          type: integer
-          min: 1024
-          max: 65536
-          default: 9300
-          required: true
+        - name: new_text
+          type: text
+          required: false
+          default: text_new
     - name: new_group
       type: group
       activatable: true
@@ -397,12 +393,10 @@
               max: 65536
               default: 9200
               required: true
-            - name: transport_port
-              type: integer
-              min: 1024
-              max: 65536
-              default: 9300
-              required: true
+            - name: new_text
+              type: text
+              required: false
+              default: text_new
         - name: new_group
           type: group
           activatable: true
