--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_fields/config.yaml
@@ -113,12 +113,10 @@
           max: 65536
           default: 9200
           required: true
-        - name: transport_port
-          type: integer
-          min: 1024
-          max: 65536
-          default: 9300
-          required: true
+        - name: new_text
+          type: text
+          required: false
+          default: text_new
     - name: new_group
       type: group
       activatable: true
